# learn-rust

course/: _layout.html  ch01-first-contact.md  ch02-space-time-coordinates.md  ch03-how-compilers-track-references.md  ch04-exercises.md  ch04-limits-of-compile-time-analysis.md  ch04-wip.md  ch05-wip.md  exercises.md  index.md
exercises/00-declarations/: Cargo.toml
exercises/01-foundations/: Cargo.toml
exercises/02-ownership-space/: Cargo.toml
exercises/03-interior-mutability/: Cargo.toml
exercises/04-lifetimes/: Cargo.toml
exercises/05-memory-ordering/: Cargo.toml
exercises/06-synthesis/: Cargo.toml
scripts/: embed-exercises.sh
spelled/: Cargo.toml
spelled/src/: lib.rs
